# tei_utils

./: pyproject.toml  readme.md  requirements.txt
src/tei_utils/: __init__.py  base_client.py  classifier_client.py  client.py  encoder_client.py  prompt_types.py  tei_ep_names.py  tei_models.py
