[project]
name = "http-utils"
version = "0.1.0"
description = "Custom retryable http client with automatic authorization support (JWT token, secret header)"
authors = [{name = "Oleg Sidorov", email = "sidorov.works@yandex.ru"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "python-jose>=3.5.0",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]