[project]
name = "tei-utils"
version = "0.1.0"
description = "Custom Hugging Face TEI client"
authors = [{name = "Oleg Sidorov", email = "sidorov.works@yandex.ru"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "http-utils @ git+https://github.com/sidorov-works/http_utils.git@9d17d759dbb68a78f3a5138373c0103818887ef7"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]